from Hamburg DOOCS git repository found the file VME2.cc, that implements function for maping devices on vme bus

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,10 @@ prj/*/*/*.filters*
 prj/tests/*/*
 !prj/tests/*/*.vcxproj
 !prj/tests/*/*.sln
+!prj/tests/*/*.pro
+!prj/tests/*/Makefile
 .DS_Store
 .qmake.stash
 *after-import-key-*.wallet
 *.so*
+src/.old
