Server to control camera on LOW.SCR3 is done

--- a/.gitignore
+++ b/.gitignore
@@ -2,27 +2,37 @@
 *~
 *.obj
 *.pro.user*
-prj/*/*/Makefile*
-prj/daqadcreceiver/daqadcreceiver_qt/daqadcreceiver
+*.o.cmd
+prj/*/*/*
+!prj/*/*/*.vcxproj
+!prj/*/*/*.vcxproj.filters
+!prj/*/*/*.sln
+!prj/*/*_vs15/Makefile
+!prj/*/*_vs15/*.h
+!prj/*/*/*.pro
+!prj/*/*/*.pri
+!prj/*/*_mkfl/Makefile
+!prj/driver/*/*.rules
 sys/*/bin/*
+sys/*/mbin/*
 sys/*/.objects/*
-prj/*/*/debug/*
-prj/*/*/release/*
+sys/drivers
+!sys/*/bin/setup_environment.bat
 moc_*.cpp
 workspaces
 .gitattributes
-prj/*/*/x64
-prj/*/*/Win32
-prj/*/*/*.filters*
-!sys/*/bin/setup_environment.bat
-prj/tests/*/*
-!prj/tests/*/*.vcxproj
-!prj/tests/*/*.sln
-!prj/tests/*/*.pro
-!prj/tests/*/Makefile
 .DS_Store
 .qmake.stash
+*.app
+*wallet.json
 *after-import-key-*.wallet
 *.so*
-src/.old
-!prj/server/laserbeamline_server_mkfl/Makefile
+prj/driver/x1timer_by_lyuto/
+drivers/src/x2timer/orig/x1timer.c~RF9d95785.TMP
+.svn/*
+*/.svn/*
+*/*/.svn/*
+*/*/*/.svn/*
+*/*/*/*/.svn/*
+*/*/*/*/*/.svn/*
+*.TMP
