--- a/prj/tests/realcom_to_tcp_test_vs15/realcom_to_tcp_test.vcxproj
+++ b/prj/tests/realcom_to_tcp_test_vs15/realcom_to_tcp_test.vcxproj
@@ -231,17 +231,27 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\src\common\aservertcp.cpp" />
-    <ClCompile Include="..\..\..\src\common\asocketb.cpp" />
-    <ClCompile Include="..\..\..\src\common\asockettcp.cpp" />
+    <ClCompile Include="..\..\..\src\common\common_argument_parser.cpp" />
+    <ClCompile Include="..\..\..\src\common\common_functionalities.cpp" />
+    <ClCompile Include="..\..\..\src\common\common_iodevice.cpp" />
+    <ClCompile Include="..\..\..\src\common\common_servertcp.cpp" />
+    <ClCompile Include="..\..\..\src\common\common_socketbase.cpp" />
+    <ClCompile Include="..\..\..\src\common\common_sockettcp.cpp" />
+    <ClCompile Include="..\..\..\src\cpp11\mutex_cpp11.cpp" />
+    <ClCompile Include="..\..\..\src\cpp11\thread_cpp11.cpp" />
     <ClCompile Include="..\..\..\src\tests\main_realcom_to_tcp_test.cpp" />
     <ClCompile Include="..\..\..\src\tests\prepare_com_port_test_win.cpp" />
     <ClCompile Include="..\..\..\src\tools\pitz_rpi_tools_serial.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\include\aservertcp.h" />
-    <ClInclude Include="..\..\..\include\asocketb.h" />
-    <ClInclude Include="..\..\..\include\asockettcp.h" />
+    <ClInclude Include="..\..\..\include\common_argument_parser.hpp" />
+    <ClInclude Include="..\..\..\include\common_argument_parser.impl.hpp" />
+    <ClInclude Include="..\..\..\include\common_defination.h" />
+    <ClInclude Include="..\..\..\include\common_iodevice.hpp" />
+    <ClInclude Include="..\..\..\include\common_servertcp.hpp" />
+    <ClInclude Include="..\..\..\include\common_socketbase.hpp" />
+    <ClInclude Include="..\..\..\include\common_socketbase.impl.hpp" />
+    <ClInclude Include="..\..\..\include\common_sockettcp.hpp" />
     <ClInclude Include="..\..\..\include\com_port_global_functions.h" />
     <ClInclude Include="..\..\..\include\pitz_rpi_tools_serial.hpp" />
     <ClInclude Include="..\..\..\include\stdafx.h" />
