--- a/prj/tests/realcom_to_tcp_test_vs15/realcom_to_tcp_test.vcxproj.filters
+++ b/prj/tests/realcom_to_tcp_test_vs15/realcom_to_tcp_test.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="..\..\..\src\common\common_sockettcp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\tools\tools_comportserver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\pitz_rpi_tools_serial.hpp">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\include\common_sockettcp.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\tools_comportserver.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
